[package]
name = "crew"
version = "0.1.0"
authors = ["Damien Stanton <damien.stanton@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/damienstanton/crew"
description = "A simple workerpool model for Rust"

[dependencies]
futures = "0.3"
async-std = { version = "1", features = ["attributes"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "0.8", features = ["v4"] }